Merged revisions 12017-12018,12032,12067,12069-12070,12072-12073,12075-12082,12085-12090,12092-12095,12098-12103,12105,12107,12109,12112-12113,12115-12118,12120-12121,12123-12126,12128-12130,12132-12140,12144-12159,12161-12162,12164,12166-12169,12171,12173-12183,12186-12189,12191-12211 via svnmerge from https://opennms.svn.sourceforge.net/svnroot/opennms/opennms/trunk
................
  r12017 | rangerrick | 2009-01-24 14:51:36 -0500 (Sat, 24 Jan 2009) | 13 lines
  
  Merged revisions 11895,12015 via svnmerge from 
  https://opennms.svn.sourceforge.net/svnroot/opennms/opennms/branches/1.6-testing
  
  ........
    r11895 | rangerrick | 2009-01-14 23:42:30 -0500 (Wed, 14 Jan 2009) | 1 line
    
    fix character encoding here too
  ........
    r12015 | tarus | 2009-01-23 19:00:40 -0500 (Fri, 23 Jan 2009) | 2 lines
    
    Changes to Liebert Reports. Thx James. Bug 2990
  ........
................
  r12018 | dhustace | 2009-01-25 21:01:25 -0500 (Sun, 25 Jan 2009) | 1 line
  
  XMLified JavaMail configuration for openNMS.  Will convert all java mail next.  This is in support of the new AckdReader
................
  r12032 | dhustace | 2009-01-26 08:32:45 -0500 (Mon, 26 Jan 2009) | 1 line
  
  Checking in changes before getting on plane ;)... Ackd stuff grr.
................
  r12067 | brozow | 2009-01-26 11:35:36 -0500 (Mon, 26 Jan 2009) | 1 line
  
  refactoring of DefaultProvisionSource
................
  r12069 | guic | 2009-01-26 12:42:26 -0500 (Mon, 26 Jan 2009) | 2 lines
  
  Progressing development of Rancid WEBUI.
................
  r12070 | rangerrick | 2009-01-26 13:57:53 -0500 (Mon, 26 Jan 2009) | 1 line
  
  for unit tests
................
  r12072 | rangerrick | 2009-01-26 16:42:37 -0500 (Mon, 26 Jan 2009) | 1 line
  
  work-in-progress for an snmp table tracker (per-row storage)
................
  r12073 | brozow | 2009-01-26 17:22:09 -0500 (Mon, 26 Jan 2009) | 1 line
  
  refactor provisioning 'differ' into the model classes
................
  r12075 |